fail_crate/tests/pub_in_no_path.rs
use inew::New;

#[derive(New)]
#[new(pub(in))]
struct A;

fn main() {}
